<?xml version="1.0" encoding="utf-8"?>
<com.it.restroexample.customview.roundview.RoundLinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp20"
        android:gravity="center"
        android:minWidth="260dp"
        android:orientation="vertical"
        app:rv_backgroundColor="@color/white"
        app:rv_cornerRadius="@dimen/dp10">
    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:minWidth="@dimen/dp60"
            android:paddingVertical="@dimen/dp15"
            android:text="@string/whoops"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            android:paddingHorizontal="@dimen/dp20"
            android:textStyle="bold" tools:ignore="UnusedAttribute"/>
    <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="80dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.1"
            android:paddingHorizontal="@dimen/dp20"
            android:scrollbars="vertical"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            tools:ignore="UnusedAttribute"/>

    <TextView
            android:id="@+id/tvButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="right|center_vertical"
            android:minWidth="@dimen/dp60"
            android:paddingVertical="@dimen/dp15"
            android:text="@string/ok"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp16"
            android:paddingHorizontal="@dimen/dp20"
            tools:ignore="RtlHardcoded,UnusedAttribute"/>
</com.it.restroexample.customview.roundview.RoundLinearLayout>