<?xml version="1.0" encoding="utf-8"?>
<com.it.restroexample.customview.roundview.RoundLinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp20"
        android:gravity="center"
        android:minWidth="260dp"
        android:orientation="vertical"
        app:rv_backgroundColor="@color/white"
        app:rv_cornerRadius="@dimen/dp10">

    <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="90dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.1"
            android:paddingHorizontal="@dimen/dp20"
            android:paddingVertical="@dimen/dp20"
            android:scrollbars="vertical"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            tools:ignore="UnusedAttribute"/>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingHorizontal="@dimen/dp20"
            tools:ignore="RtlHardcoded,UnusedAttribute">

        <TextView
                android:id="@+id/tvButton1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp20"
                android:gravity="center"
                android:minWidth="@dimen/dp60"
                android:paddingVertical="@dimen/dp15"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"/>

        <TextView
                android:id="@+id/tvButton2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp20"
                android:gravity="center"
                android:minWidth="@dimen/dp60"
                android:paddingVertical="@dimen/dp15"
                android:text="@string/exit_app"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp16"/>
    </LinearLayout>
</com.it.restroexample.customview.roundview.RoundLinearLayout>